TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "1990978677216" [label="Start"];
  "1990978677216" -> "1990978676304";
  "1990978676304" [label="Code"];
  "1990978676304" -> "1990978674864";
  "1990978674864" [label="Function"];
  "1990978674864" -> "1990978672272";
  "1990978674864" -> "1990978681056";
  "1990978674864" -> "1990978681872";
  "1990978674864" -> "1990978670352";
  "1990978674864" -> "1990978681536";
  "1990978674864" -> "1990978680096";
  "1990978672272" [label="main"];
  "1990978681056" [label="("];
  "1990978681872" [label=")"];
  "1990978670352" [label="{"];
  "1990978681536" [label="Code"];
  "1990978681536" -> "1990978680048";
  "1990978681536" -> "1990978679904";
  "1990978681536" -> "1990978682352";
  "1990978681536" -> "1990978681584";
  "1990978681536" -> "1990978677888";
  "1990978681536" -> "1990978678608";
  "1990978681536" -> "1990978678224";
  "1990978680048" [label="Declaration"];
  "1990978680048" -> "1990978671984";
  "1990978680048" -> "1990978678032";
  "1990978671984" [label="x"];
  "1990978678032" [label="10"];
  "1990978679904" [label=";"];
  "1990978682352" [label="{"];
  "1990978681584" [label="Code"];
  "1990978681584" -> "1990978678944";
  "1990978681584" -> "1990978670880";
  "1990978681584" -> "1990978672752";
  "1990978681584" -> "1990978678368";
  "1990978681584" -> "1990978676064";
  "1990978681584" -> "1990978674048";
  "1990978681584" -> "1990978677696";
  "1990978678944" [label="Declaration"];
  "1990978678944" -> "1990978675872";
  "1990978678944" -> "1990978679424";
  "1990978675872" [label="y"];
  "1990978679424" [label="20"];
  "1990978670880" [label=";"];
  "1990978672752" [label="{"];
  "1990978678368" [label="Code"];
  "1990978678368" -> "1990978675584";
  "1990978678368" -> "1990978681632";
  "1990978675584" [label="Declaration"];
  "1990978675584" -> "1990978677312";
  "1990978675584" -> "1990978680000";
  "1990978677312" [label="z"];
  "1990978680000" [label="30"];
  "1990978681632" [label=";"];
  "1990978676064" [label="}"];
  "1990978674048" [label="Assignment"];
  "1990978674048" -> "1990978677648";
  "1990978674048" -> "1990978677360";
  "1990978677648" [label="z"];
  "1990978677360" [label="20"];
  "1990978677696" [label=";"];
  "1990978677888" [label="}"];
  "1990978678608" [label="Return"];
  "1990978678224" [label=";"];
  "1990978680096" [label="}"];
}
